syntax = "proto3";

package auth;

option go_package = "/auth";

message Auth{
    string email = 1;
    string password = 2;
}

message AuthRequest {
    Auth authEntry = 1;
}

message AuthResponse {
    string result = 1;
}

service AuthService {
    rpc CheckAuth(AuthRequest) returns (AuthResponse);
}